# rust-training-temperature-conversion

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: conversion.rs  main.rs
